--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,7 @@
 
 @layer utilities {
   .css-invert {
-    @apply invert-[50%] brightness-200;
+    @apply brightness-200 invert-[50%];
   }
 
   .custom-scrollbar::-webkit-scrollbar {
@@ -158,4 +158,9 @@
 
 .comment-form_btn {
   @apply rounded-3xl bg-primary-500 px-8 py-2 !text-small-regular text-light-1 max-xs:w-full !important;
+}
+
+/* User Avatar */
+.user-avatar_image {
+  @apply h-12 rounded-full !important;
 }
